# PDF-Extract-Kit

./: .dockerignore  .gitattributes  Dockerfile  Dockerfile.dev  Dockerfile.gpu  Dockerfile.gpu.dev  README.md  TEST_API.md  TROUBLESHOOTING.md  api.py  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml
configs/: layout_detection.yaml
pdf_extract_kit/tasks/layout_detection/models/: yolo.py
scripts/: layout_detection.py
